--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
 # try to build circleci
+# Build and test with custom container image for ARM and x64 with xvfb and mocha
+# https://github.com/electron/electron/blob/master/.circleci/config.yml
 
 version: 2
 jobs:
