--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,5 +12,6 @@ jobs:
       - run: echo "A first hello"
       - run: npm install
       - run: mkdir ~/junit
-    test:
+ test:
+    steps:
       - npm test  #每一個deploy到github上的commit都會執行npm test
