--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,4 +14,4 @@ jobs:
       - run: mkdir ~/junit
  test:
     steps:
-      - npm test  #每一個deploy到github上的commit都會執行npm test
+      - run: npm test  #每一個deploy到github上的commit都會執行npm test
