--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,5 @@ jobs:
       - checkout
       - run: echo "A first hello"
       - run: npm install
+      - run: npm test
       - run: mkdir ~/junit
- test:
-    steps:
-      - run: npm test  #每一個deploy到github上的commit都會執行npm test
