--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,8 @@ jobs:
     docker: # See https://docs.docker.com/get-started/#docker-concepts if you are new to Docker.
       - image: circleci/node:10-browsers
     steps:
-    command: |
+    run:
+      command: |
            echo 'Hello World!'
            echo 'This is the delivery pipeline'
       
