--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,8 @@ jobs:
     docker: # See https://docs.docker.com/get-started/#docker-concepts if you are new to Docker.
       - image: circleci/node:10-browsers
     steps:
-    - checkout
-    - run:
-      
-      command: |
-           echo 'Hello World!'
-           echo 'This is the delivery pipeline'
-      
+      - checkout
+       - run: npm install
+       - run: npm test
+       - run: mkdir ~/junit
+       - run: echo "A first hello"
