--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,11 @@
 # https://github.com/electron/electron/blob/master/.circleci/config.yml
 
 version: 2
+# This indicates the version of the CircleCI platform you are using. 2.0 is the most recent version
 jobs:
+# The jobs level contains a collection of arbitrarily named children
   build:
+  # build is the first named child in the jobs collection
     docker: # See https://docs.docker.com/get-started/#docker-concepts if you are new to Docker.
       - image: circleci/node:10-browsers
     steps:
