--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,6 @@ jobs:
       - checkout
       # Each run directive is executed in the order in which it was declared
       - run: npm install
-      - run: npm test
-      - run: mkdir ~/junit
+      # execute the unit test
+      - run: npm test      
       - run: echo "A first hello"
