update listen port and package.json

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "hello-ci-workflow",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+  "start": "node app.js",
     "test": "mocha"
   },
   "author": "",
