Add test in workflows

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,13 @@ jobs:
     steps:
     # The steps collection is an ordered list of run directives
       - checkout
+  test:
+  # build is the first named child in the jobs collection
+    docker: # See https://docs.docker.com/get-started/#docker-concepts if you are new to Docker.
+      - image: circleci/node:10-browsers
+    steps:
+    # The steps collection is an ordered list of run directives
+      - checkout
       # Each run directive is executed in the order in which it was declared
       - run: npm install
       # execute the unit test
@@ -23,3 +30,4 @@ workflows:
   build_and_test:
     jobs:
       - build
+	  - test
